--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ HOST=0.0.0.0
 
 LOCAL_MONGODB_URI=mongodb://localhost:27017/appdb
 
-ATLAS_URI=mongodb+srv://user1:Summer_1@cluster0-gck6s.mongodb.net/test?retryWrites=true
+ATLAS_URI=mongodb+srv://user1:password@cluster0-gck6s.mongodb.net/test?retryWrites=true
 
 DB_NAME=appdb
 
