--- a/package.json
+++ b/package.json
@@ -29,7 +29,18 @@
     "serve-favicon": "latest",
     "winston": "latest"
   },
+  "devDependencies": {
+    "istanbul": "^0.4.5",
+    "jasmine": "^3.4.0",
+    "jasmine-console-reporter": "^3.1.0",
+    "jasmine-node": "^2.0.1",
+    "jasmine-supertest": "^1.0.0",
+    "supertest": "^4.0.2"
+  },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jasmine-node spec",
+    "test-cover": "istanbul cover --include-all-sources ./spec/app.spec.js && istanbul check-coverage"
+
   }
 }
